fixed Cropper and artwork , added a loading spinner

--- a/src/components/SubmissionPageOne/NewSubmission.module.css
+++ b/src/components/SubmissionPageOne/NewSubmission.module.css
@@ -161,7 +161,13 @@ input[type='text']{
 	position: relative;
 	height: 100%;	
 }
-
+.c__loader{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 9;
+	display: flex;align-items: center;
+}
 @media screen and (min-width: 1400px),
 screen and (min-width: 1600px),
 screen and (min-width: 1900px) 
